# rosettaprogrammingproblems

./: README.md
OCaml/: Dockerfile  Makefile  README.md  dune  dune-project  extensions.json  isprime.ml  lists.ml  ocaml.opam  options.ml  records_variants.ml  recursive.ml  refs.ml  sum.ml  tuples.ml
OCaml/exercises/: coprime.ml  dune  dune-project  is_palindrome.ml  last_two.ml  leaves_list.ml  leaves_tree.ml  length.ml  nth_ele.ml  reverse.ml  tail_list.ml
OCaml/learn-ocaml/: simple_functions_over_integers.ml  simple_functions_over_strings.ml  tetragon.ml  word_concat.ml  x_power_8.ml
OCaml/real_world_ocaml/: arrays.ml  bind.ml  compiling.ml  counter.ml  errors.ml  exceptions.ml  functions.ml  interfaces.ml  let.ml  lists.ml  modules.ml  monads.ml  pattern_matching.ml  records.ml  records_variants.ml  recursive.ml  single_file.ml  terminal_colours.ml
Python3/Simple Tasks/: Arithmetic.py  ArrConcatenation.py  CopyString.py  Factorial.py  IsNumeric.py  Logical Operations.py  Loops.py  RGPGenerator.py  ReadLineByLine.py  RealConstantsAndFunctions.py  SimpleWindowedApplication.py
Simple Tasks/: APlusB.py  ChangeOfCharacter.py  CharacterCodes.py  DivisionByZero.py  EmptyProgram.py  Fizzbuzz.py  GreatestElement.py  MultiplicationTables.py  NthRoot.py  Substring.py  TokenizeString.py  ZeroToZerothPower.py  goals and aspirations.txt
